--- a/FactoryData/FactoryData.vcxproj
+++ b/FactoryData/FactoryData.vcxproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionData.h" />
+    <ClInclude Include="containers.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
