added inputs form

--- a/FactoryData/FactoryData.vcxproj
+++ b/FactoryData/FactoryData.vcxproj
@@ -124,14 +124,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="inputs1.cpp" />
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionData.h" />
     <ClInclude Include="containers.h" />
+    <ClInclude Include="inputs1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Variables.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MyForm.resx">
