--- a/FactoryData/FactoryData.vcxproj
+++ b/FactoryData/FactoryData.vcxproj
@@ -124,13 +124,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="inputs1.cpp" />
+    <ClCompile Include="Inputs.cpp" />
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionData.h" />
     <ClInclude Include="containers.h" />
-    <ClInclude Include="inputs1.h">
+    <ClInclude Include="Inputs.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="MyForm.h">
@@ -139,6 +139,9 @@
     <ClInclude Include="Variables.h" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Inputs.resx">
+      <DependentUpon>Inputs.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
