--- a/FactoryData/FactoryData.vcxproj.filters
+++ b/FactoryData/FactoryData.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ItemDetails.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="imports.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ItemDetails.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
